Chapter text no longer wraps around checkmark

--- a/src/Accordion/Accordion.css
+++ b/src/Accordion/Accordion.css
@@ -1,8 +1,5 @@
-.accordion-wrap {
-  /* padding-bottom: 4rem; */
-}
-
 .list-group-item {
+  display: flex;
   padding: 1.5rem 1.25rem;
   transition: color 0.1s ease-in-out;
 }
@@ -32,7 +29,7 @@
 }
 
 .ep-todo-span {
-  margin-right: 0.5rem;
+  margin-right: 0.7rem;
   position: relative;
   top: 3px;
 }
@@ -103,7 +100,6 @@
 .card {
   border-radius: none;
 }
-
 
 .svg-circle {
   fill: var(--blue-bright);
